path replaced by full url on cover field (on mocks and doc)
