# api-swagger.json
@@ -40,21 +40,13 @@ paths:
                 type: object
               example:
                 recommendations:
-                  - id: '1'
-                    title: The Gift
-                    genres:
-                      - Thriller
-                    year: '2000'
-                    cover: /nQdBE1P0r4ZrgGqy5EX8sL2kXG6.jpg
-                    type: MOVIE
-                    positive_reviews_qty: 1
-                    negative_reviews_qty: 0
                   - id: '3'
                     title: Harry Potter and the Philosopher's Stone
                     genres:
                       - Fantasy
                     year: '2001'
-                    cover: /wuMc08IPKEatf9rnMNXvIDxqP4W.jpg
+                    cover: >-
+                      https://image.tmdb.org/t/p/w500/wuMc08IPKEatf9rnMNXvIDxqP4W.jpg
                     type: MOVIE
                     positive_reviews_qty: 1
                     negative_reviews_qty: 0
@@ -63,7 +55,8 @@ paths:
                     genres:
                       - Fantasy
                     year: '2002'
-                    cover: /sdEOH0992YZ0QSxgXNIGLq1ToUi.jpg
+                    cover: >-
+                      https://image.tmdb.org/t/p/w500/sdEOH0992YZ0QSxgXNIGLq1ToUi.jpg
                     type: MOVIE
                     positive_reviews_qty: 0
                     negative_reviews_qty: 1
@@ -112,7 +105,8 @@ paths:
                 genres:
                   - Thriller
                 year: '2000'
-                cover: /nQdBE1P0r4ZrgGqy5EX8sL2kXG6.jpg
+                cover: >-
+                  https://image.tmdb.org/t/p/w500/nQdBE1P0r4ZrgGqy5EX8sL2kXG6.jpg
                 type: MOVIE
                 overview: >-
                   When a local woman disappears and the police can't seem to
@@ -122,7 +116,7 @@ paths:
                   arrest of an abusive husband, but did he really do it?
                 user_review:
                   rating: 1
-                  created_date: '2022-05-01T10:03:52.860516'
+                  created_date: '2022-05-01T10:15:51.610892'
                 positive_reviews_qty: 1
                 negative_reviews_qty: 0
   /shows/{showId}:
@@ -165,7 +159,8 @@ paths:
                 genres:
                   - Thriller
                 year: '2000'
-                cover: /nQdBE1P0r4ZrgGqy5EX8sL2kXG6.jpg
+                cover: >-
+                  https://image.tmdb.org/t/p/w500/nQdBE1P0r4ZrgGqy5EX8sL2kXG6.jpg
                 type: MOVIE
                 overview: >-
                   When a local woman disappears and the police can't seem to
@@ -253,8 +248,9 @@ paths:
         - name: userId
           in: path
           schema:
-            type: string
+            type: integer
           required: true
+          example: '1'
         - name: showId
           in: path
           schema:
